Successfully ignoring settings.py for security issues

--- a/.gitignore
+++ b/.gitignore
@@ -108,4 +108,4 @@ venv.bak/
 /media
 
 # Security Issues, don't want to upload settings with your username, password, etc. 
-python_django_dev/btre/settings.py
+settings.py
